--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section id="welcome-section" class="welcome-section">
-      <h1>Hey I am Somdobomk</h1>
+      <h1>Hey I'm David Zapico</h1>
       <p>a fullstack web developer</p>
     </section>
 
@@ -147,7 +147,7 @@
           class="btn contact-details"
           ><i class="fab fa-twitter"></i> Twitter</a
         >
-        <a href="/cdn-cgi/l/email-protection#086d70696578646d486d70696578646d266b6765" class="btn contact-details"><i class="fas fa-inbox"></i> Send a mail</a
+        <a href="/cdn-cgi/l/email-protection#086d70696578646d486d70696578646d266b6765" class="btn contact-details"><i class="fas fa-inbox"></i> Send an email</a
         >
       </div>
     </section>
